# Paean

./: .gitignore  README.md
Paean-CPU/: CMakeLists.txt
Paean-CPU/include/: bin.h  bin_assign_kernel.h  bin_calc_kernel.h  bisect.h  clock.h  incgammabeta.h  parse.h  sort.h  util.h
Paean-CPU/input/: length_table.csv
Paean-CPU/src/: gene.cpp  prepare.cpp  sort.cpp
Paean-GPU/: CMakeLists.txt
Paean-GPU/cmake/: FindThrust.cmake
Paean-GPU/include/: bin_assign_kernel.cuh  parse.h
Paean-GPU/src/: gene.cu  parse.cpp
Paean_MPI/: Makefile  cub_sort.cu  gene.cu  mpi_bind.sh  run_mpi.sh
Paean_MPI/include/: bin.h  bin_assign_kernel.cuh  bin_calc_kernel.cuh  bisect.cuh  cub_sort.cuh  cuda_util.h  incgammabeta.cuh  util.h
Paean_MPI/src/: cub_sort.cu  gene.cu  libhts.so.3  paean
docker/: demo_exec.sh
